--- a/ui/package.json
+++ b/ui/package.json
@@ -12,9 +12,12 @@
     "@mui/material": "^5.10.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
     "react-router-dom": "^6.12.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-virtuoso": "^4.3.11",
-    "ts-json-schema-generator": "^1.4.0"
+    "ts-json-schema-generator": "^1.4.0",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "dev": "vite",
@@ -27,6 +30,8 @@
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-syntax-highlighter": "^15.5.9",
+    "@types/uuid": "^9.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "jest": "^29.1.2",
     "prop-types": "^15.8.1",
